tests/errors/integerLiteralOverflow.milo
// @error: integer literal 200 overflows i8

fn main(): i32 {
    let x: i8 = 200
    return 0
}
